# e-neiler

./: .env.example  .gitignore  .manifest.json  AUTHORS  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  convention.yaml  deploy.yaml  lint.yaml  release.yaml  test.yaml
assets/: template.txt
data/: details.csv  table.csv  template.txt
example/: table.csv  template.txt
src/: app.py  main.py  window.py
src/config/: metadata.py
src/logic/: email.py
src/pages/: help.py  home.py  settings.py
src/services/: email.py
src/utils/: config.py  constants.py  data_saver.py  logger.py  logging.py  notifications.py  path.py  system_tray.py
test/: app_test.py
