[project]

name = "e-neiler"
version = "2.1.1"
description = "Fully customizable SMTP e-mailer desktop app."
dependencies = [
    "pyside6==6.7.3",
    "pyside6-fluent-widgets==1.6.6",
    "pandas===2.2.2",
    "html2text==2024.2.26",
]

[project.optional-dependencies]

compiler = ["nuitka==2.4.8"]
