[project]

name = "e-neiler"
version = "3.4.2"
description = "Fully customizable SMTP e-mailer desktop app."
dependencies = [
    "pyside6==6.9.0",
    "pyside6-fluent-widgets==1.8.1",
    "loguru===0.7.3",
    "pandas===2.2.3",
    "openpyxl==3.1.5",
    "html2text==2025.4.15",
]

[project.optional-dependencies]

lint = ["ruff==0.11.10", "pre-commit==4.2.0"]
test = ["pytest==8.3.5", "pytest-qt==4.4.0", "pytest-xvfb==3.1.1"]
build = ["nuitka==2.7.3", "imageio==2.37.0"]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
qt_qapp_name = "Test"
addopts = "-ra"
testpaths = ["test"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["*Test", "test*"]
